hphp/hack/test/typecheck/function_pointer/special_functions.php
<?hh

function f<reify T>(): void {
  $_ = HH\classname_to_class<>;
  $_ = exit<>;
  $_ = HH\ReifiedGenerics\get_class_from_type<T>;
  $_ = HH\global_get<>;
  $_ = HH\global_set<>;
  $_ = HH\global_unset<>;
  $_ = HH\tag_provenance_here<>;
  $_ = HH\FIXME\UNSAFE_CAST<int, string>;
  $_ = HH\FIXME\UNSAFE_NONNULL_CAST<>;
}
